refactor(loans-service): Implement null-safe checks and optimize stream collectors